# prime-chain-notes

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  NOTES.md  NOTICE  README.md  THIRD-PARTY.md  app-config.toml
companion/: chain-scan.js  index.html  note.html  owner-probe.js  server.py  ur.js  viewer.html
companion/tests/: test_chain_scan.js  test_companion_qr.py  test_companion_regtest.py  test_companion_testnet4.py  test_multi_decode.js  test_owner_probe.js
i18n/: en.json  es.json
notes-core/: Cargo.toml
notes-core/examples/: notes_cli.rs  ur_decode.rs  ur_encode.rs
notes-core/src/: address.rs  bip32.rs  bip39.rs  bundle.rs  confirm.rs  crypt.rs  decode.rs  dm.rs  envelope.rs  export.rs  fold.rs  keys.rs  lib.rs  psbt.rs  seeds.rs  sighash.rs  sign.rs  taproot.rs  tx.rs  wpkh.rs
notes-core/tests/: bip84_vectors.rs  confirm.rs  decode.rs  export_vectors.rs  fold.rs  mixed_tx.rs  multi_recipient.rs  psbt.rs  roundtrip.rs  seed_vectors.rs  vectors.rs  wpkh_vectors.rs
scripts/: publish-companion.sh  regtest-companion.sh  regtest-e2e.sh
src/: main.rs  notebooks.rs  spending.rs
theme/: theme.json
ui/: app.slint  callbacks.slint
