# UI-free chain-notes library — key derivation, PNTE envelope, AEAD,
# taproot transaction build/sign, sync-bundle handling. Host-testable
# (`cargo test -p notes-core`), mirroring the wallet-core pattern.
# Pure-Rust deps only: C code does not cross-compile to
# armv7a-unknown-xous-elf under the SDK toolchain.
[package]
name = "notes-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "std"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = { version = "0.12", default-features = false }
chacha20poly1305 = "0.10"
bech32 = "0.11"
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
# Cross-check ONLY: our hand-rolled tx serialization / sighashes / signatures
# are verified against rust-bitcoin on the host. Never a device dependency —
# secp256k1-sys is C and unproven under the SDK toolchain.
bitcoin = { version = "0.32", features = ["rand-std"] }
