# UI-free chain-notes library — key derivation, PNTE envelope, AEAD,
# taproot transaction build/sign, sync-bundle handling. Host-testable
# (`cargo test -p notes-core`), mirroring the wallet-core pattern.
# Pure-Rust deps only: C code does not cross-compile to
# armv7a-unknown-xous-elf under the SDK toolchain.
[package]
name = "notes-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "std"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = { version = "0.12", default-features = false }
# Recovery seeds (BIP-39 words + BIP-86 leaves from GetAppSeed) — same
# pure-Rust crates bip85-core hardware-builds with.
pbkdf2 = "0.12"
ripemd = "0.1"
chacha20poly1305 = "0.10"
bech32 = "0.11"
# Key-export rendering (WIF, xprv/xpub) for the reveal surfaces — base58check,
# pure Rust (no C), so the device builds it too.
bs58 = { version = "0.5", default-features = false, features = ["check", "alloc"] }
getrandom = "0.2"
# Scanned-bundle payloads: CNB1 || deflate-raw(json). Pure Rust.
miniz_oxide = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
# Cross-check ONLY: our hand-rolled tx serialization / sighashes / signatures
# are verified against rust-bitcoin on the host. Never a device dependency —
# secp256k1-sys is C and unproven under the SDK toolchain.
bitcoin = { version = "0.32", features = ["rand-std"] }
# Cross-check ONLY: our ported BIP-39 is verified against the rust-bitcoin
# ecosystem's independent implementation (spec-vector-tested upstream).
bip39 = "2"
# The EXACT UR decoder the KeyOS system QR scanner runs (see
# apps/gui-app-qr-scanner) — used to verify the companion's JS UR encoder
# emits parts the device will actually reassemble.
foundation-ur = "0.4"
